RESOLVED FIXED229894
Fix for debug mode on MSVC after r281998
https://bugs.webkit.org/show_bug.cgi?id=229894
Summary Fix for debug mode on MSVC after r281998
Stephan Szabo
Reported 2021-09-03 14:03:54 PDT
Unfortunately my previous fix for having ENABLE(SERVICE_WORKER) off in debug seems to have failed on wincairo complaining about uses of #if inside the ASSERT() macro.
Attachments
Patch (1.66 KB, patch)
2021-09-03 14:42 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2021-09-03 14:42:52 PDT
EWS
Comment 2 2021-09-03 16:40:50 PDT
Committed r282036 (241337@main): <https://commits.webkit.org/241337@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437313 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-03 16:41:21 PDT
Note You need to log in before you can comment on or make changes to this bug.