Fix for debug mode on MSVC after r281998 https://bugs.webkit.org/show_bug.cgi?id=229894

Unreviewed build fix for wincairo debug.

No new tests, build fix only.

Pull the #if out from inside the ASSERT.


* NetworkProcess/NetworkResourceLoader.cpp:


Canonical link: https://commits.webkit.org/241337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282036 268f45cc-cd09-0410-ab3c-d52691b4dbfc